src/assets/css/main.css
@charset "UTF-8";
/*-- Google Font --*/

/*chips*/
@import 'chip.css';
/*-- Common Style --*/

@font-face {
  font-family: 'Zilap Africa';
  src: url('../fonts/Zilap.ttf') format('truetype');
}
@font-face {
  font-family: 'Andreas';
  src: url('../fonts/Andreas.ttf') format('truetype');
}

:root {
  --primary-color: #ffbc01;
  --secondary-color: #000000;
  --accent-color: #e6fff1;
  --text-color: #fff;
}
*,
*::after,
*::before {
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
}
/* Chrome, Safari, Edge, Opera */
input::-webkit-outer-spin-button,
input::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

/* Firefox */
input[type='number'] {
  -moz-appearance: textfield;
}
html,
body {
  height: 100%;
  width: 100%;
  overflow-x: hidden;
  font-family: 'Zilap Africa';
  background: linear-gradient(
    90deg,
    rgba(0, 0, 0, 1) 52%,
    rgba(19, 19, 19, 0.979540278402607) 100%
  );
}

body {
  line-height: 24px;
  font-size: 14px;
  font-style: normal;
  font-weight: 400;
  visibility: visible;
  font-family: Arial, Helvetica, sans-serif;
  color: var(--text-color);
  position: relative;
  overflow-x: hidden;
  margin-top: 0px;
}

@media only screen and (min-width: 767px) {
  .roadmap-contents p,
  .goal p {
    width: 80%;
  }
}
@media only screen and (max-width: 796px) {
  body {
  }
  .sango .back-text {
    top: 3.9rem !important;
    font-size: 5rem !important;
  }
  .sango-card {
    font-size: 0.5rem !important;
    width: 4.5rem !important;
    height: 5rem !important;
  }
  .sango-card h2 {
    font-weight: 600;
    font-size: 1.2rem !important;
    margin-bottom: 0rem !important;
    line-height: 1.9rem !important;
  }
  .sango-card p {
    font-weight: 500;
    font-size: 0.8rem;
    margin-top: 0rem !important;
    line-height: 1.4rem !important;
  }
  .spirit-intro {
    font-weight: 700;
    font-size: 4rem !important;
    line-height: 1.1rem !important;
    padding-left: 0rem !important;
  }
  .spirit-intro2 {
    font-size: 6rem !important;
    line-height: 10rem !important;
    font-weight: 700;
  }
  .spirit-intro span {
    font-size: 25vw !important;
  }
  .home-slider-item {
    height: 110px !important;
    width: 120px !important;
    border-radius: 10px;
    background-color: transparent;
  }
}
@media only screen and (max-width: 575px) {
  body {
  }
  .sango .back-text {
    position: absolute;
    top: 3.5rem !important;
    text-align: center;
    width: 100%;
    z-index: -1;
    font-family: 'zilap africa';
    color: var(--primary-color);
    font-size: 3rem !important;
    font-weight: 800;
  }
  .sango-card {
    margin-right: 0.8rem !important;
    font-size: 0.5rem !important;
    width: 2.5rem !important;
    height: 3rem !important;
    display: grid;
    place-items: top !important;
  }
  .sango-card h2 {
    font-weight: 600;
    font-size: 0.5rem !important;
    margin-bottom: 0rem !important;
    line-height: 1.3rem !important;
  }
  .sango-card p {
    font-weight: 500;
    font-size: 0.5rem;
    margin-top: 0rem !important;
    line-height: 0.7rem !important;
  }
}
@media only screen and (max-width: 479px) {
  body {
  }
  .hero-section {
    margin-top: 20px !important;
  }
  .email-contact-section {
    margin-top: 20px !important;
  }
  .home-slider {
    margin-top: 20px !important;
  }
  .spirit-intro {
    font-weight: 700;
    font-size: 4rem !important;
    line-height: 1.1rem !important;
    padding-left: 0rem !important;
  }
  .spirit-intro2 {
    font-size: 4rem !important;
    line-height: 7rem !important;
    font-weight: 700;
  }
  .sango .back-text {
    position: absolute;
    top: 7rem !important;
    text-align: center;
    width: 100%;
    z-index: -1;
    font-family: 'zilap africa';
    color: var(--primary-color);
    font-size: 4.5rem !important;
    font-weight: 800;
  }
  .sango .front-cards {
    position: absolute;
    bottom: 0.2rem;
    text-align: center;
    justify-content: center;
    width: 100%;
    z-index: 3;
    display: flex;
    flex-wrap: wrap;
  }
  .sango-card {
    margin-right: 1rem !important;
    font-size: 0.5rem !important;
    width: 3rem !important;
    height: 3.5rem !important;
    display: grid;
    place-items: top !important;
  }
  .sango-card h2 {
    font-weight: 600;
    font-size: 0.7rem !important;
    margin-bottom: 0rem !important;
    line-height: 2rem !important;
  }
  .sango-card p {
    font-weight: 500;
    font-size: 0.5rem;
    margin-top: 0rem !important;
    line-height: 0.7rem !important;
  }

  .spirits {
    padding-bottom: 3rem !important;
    padding-top: 3rem !important;
  }
  .home-slider-item {
    height: 160px !important;
    width: 190px !important;
    border-radius: 10px;
    background-color: transparent;
  }
  .roadmap-contents {
    color: var(--primary-color) !important;
    border-left: var(--primary-color) solid 5px;
    padding-left: 1.5rem;
    margin-bottom: 2.5rem !important;
    margin-left: 0.5rem;
  }
  .sango-image img {
    width: 100%;
  }
}
/* ... */

